[project]
name = "multidocrag-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.1",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langsmith>=0.4.41",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
